// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Story snapshots: Chip ChipText snapshot 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 4,
          "justifyContent": "center",
          "marginRight": 8,
          "maxWidth": 192,
          "paddingHorizontal": 8,
        },
        {
          "backgroundColor": "#F2F3F5",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "marginRight": 8,
            "maxWidth": 120,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "textAlign": "left",
              },
              {
                "color": "#2F343D",
              },
            ]
          }
        >
          Rocket.Cat
        </Text>
      </View>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#2F343D",
              "fontSize": 32,
            },
            [
              {
                "lineHeight": 32,
              },
              undefined,
            ],
            {
              "fontFamily": "custom",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story snapshots: Chip ChipWithShortText snapshot 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 4,
          "justifyContent": "center",
          "marginRight": 8,
          "maxWidth": 192,
          "paddingHorizontal": 8,
        },
        {
          "backgroundColor": "#F2F3F5",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "marginRight": 8,
            "maxWidth": 120,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "textAlign": "left",
              },
              {
                "color": "#2F343D",
              },
            ]
          }
        >
          Short
        </Text>
      </View>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#2F343D",
              "fontSize": 32,
            },
            [
              {
                "lineHeight": 32,
              },
              undefined,
            ],
            {
              "fontFamily": "custom",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story snapshots: Chip ChipWithoutAvatar snapshot 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": false,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 4,
          "justifyContent": "center",
          "marginRight": 8,
          "maxWidth": 192,
          "paddingHorizontal": 8,
        },
        {
          "backgroundColor": "#F2F3F5",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "marginRight": 8,
            "maxWidth": 120,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "textAlign": "left",
              },
              {
                "color": "#2F343D",
              },
            ]
          }
        >
          Without Avatar
        </Text>
      </View>
      <Text
        allowFontScaling={false}
        selectable={false}
        style={
          [
            {
              "color": "#2F343D",
              "fontSize": 32,
            },
            [
              {
                "lineHeight": 32,
              },
              undefined,
            ],
            {
              "fontFamily": "custom",
              "fontStyle": "normal",
              "fontWeight": "normal",
            },
            {},
          ]
        }
      >
        
      </Text>
    </View>
  </View>
</View>
`;

exports[`Story snapshots: Chip ChipWithoutAvatarAndIcon snapshot 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 4,
          "justifyContent": "center",
          "marginRight": 8,
          "maxWidth": 192,
          "paddingHorizontal": 8,
        },
        {
          "backgroundColor": "#F2F3F5",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "marginRight": 8,
            "maxWidth": 120,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "textAlign": "left",
              },
              {
                "color": "#2F343D",
              },
            ]
          }
        >
          Without Avatar and Icon
        </Text>
      </View>
    </View>
  </View>
</View>
`;

exports[`Story snapshots: Chip ChipWithoutIcon snapshot 1`] = `
<View
  style={
    {
      "alignItems": "flex-start",
      "flex": 1,
      "padding": 16,
    }
  }
>
  <View
    accessibilityState={
      {
        "busy": undefined,
        "checked": undefined,
        "disabled": true,
        "expanded": undefined,
        "selected": undefined,
      }
    }
    accessibilityValue={
      {
        "max": undefined,
        "min": undefined,
        "now": undefined,
        "text": undefined,
      }
    }
    accessible={true}
    collapsable={false}
    focusable={true}
    onBlur={[Function]}
    onClick={[Function]}
    onFocus={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      [
        {
          "borderRadius": 4,
          "justifyContent": "center",
          "marginRight": 8,
          "maxWidth": 192,
          "paddingHorizontal": 8,
        },
        {
          "backgroundColor": "#F2F3F5",
        },
        undefined,
      ]
    }
  >
    <View
      style={
        {
          "alignItems": "center",
          "flexDirection": "row",
        }
      }
    >
      <View
        style={
          {
            "marginRight": 8,
            "maxWidth": 120,
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            [
              {
                "backgroundColor": "transparent",
                "fontFamily": "Inter",
                "fontSize": 16,
                "fontWeight": "500",
                "textAlign": "left",
              },
              {
                "color": "#2F343D",
              },
            ]
          }
        >
          Without Icon
        </Text>
      </View>
    </View>
  </View>
</View>
`;
